// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UI container > Match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_container_0c0e90"
      >
        Container
      </div>
      <header
        class="_container_0c0e90"
      >
        Container
      </header>
      <section
        class="_container_0c0e90"
      >
        Container
      </section>
      <article
        class="_container_0c0e90"
      >
        Container
      </article>
    </div>
  </body>,
  "container": <div>
    <div
      class="_container_0c0e90"
    >
      Container
    </div>
    <header
      class="_container_0c0e90"
    >
      Container
    </header>
    <section
      class="_container_0c0e90"
    >
      Container
    </section>
    <article
      class="_container_0c0e90"
    >
      Container
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UI container > Match snapshot 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_container_0c0e90"
      >
        Container
      </div>
      <header
        class="_container_0c0e90"
      >
        Container
      </header>
      <section
        class="_container_0c0e90"
      >
        Container
      </section>
      <article
        class="_container_0c0e90"
      >
        Container
      </article>
    </div>
    <div>
      <div
        class="_grid_8da033"
        style="--cols: 12; --rows: 1; --max-width: 1680px;"
      >
        Container
      </div>
      <section
        class="_grid_8da033"
        style="--cols: 12; --rows: 1; --max-width: 1680px;"
      >
        Container
      </section>
      <article
        class="_grid_8da033"
        style="--cols: 12; --rows: 1; --max-width: 1680px;"
      >
        Container
      </article>
    </div>
  </body>,
  "container": <div>
    <div
      class="_grid_8da033"
      style="--cols: 12; --rows: 1; --max-width: 1680px;"
    >
      Container
    </div>
    <section
      class="_grid_8da033"
      style="--cols: 12; --rows: 1; --max-width: 1680px;"
    >
      Container
    </section>
    <article
      class="_grid_8da033"
      style="--cols: 12; --rows: 1; --max-width: 1680px;"
    >
      Container
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
